// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagnosticMini component should render when it is done loading and there are no diagnostics 1`] = `
<DiagnosticMini
  passedDiagnostics={Array []}
>
  <span />
</DiagnosticMini>
`;

exports[`DiagnosticMini component should render when it is loading 1`] = `
<DiagnosticMini>
  <span />
</DiagnosticMini>
`;

exports[`DiagnosticMini component should render when there are diagnostics 1`] = `
<DiagnosticMini
  passedDiagnostics={
    Array [
      Object {
        "activity_id": 447,
        "activity_name": "ELL Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 447,
        "activity_name": "ELL Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 5,
        "unit_id": 826268,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 850,
        "activity_name": "Intermediate Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 850,
        "activity_name": "Intermediate Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 888,
        "activity_name": "Advanced Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 888,
        "activity_name": "Advanced Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 992,
        "activity_name": "AP® Writing Skills Survey",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 992,
        "activity_name": "AP® Writing Skills Survey",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1161,
        "activity_name": "ELL Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1161,
        "activity_name": "ELL Starter Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1229,
        "activity_name": "Pre-AP® Writing Skills Survey 1: Basics of Sentence Patterns",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1229,
        "activity_name": "Pre-AP® Writing Skills Survey 1: Basics of Sentence Patterns",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1230,
        "activity_name": "Pre-AP® Writing Skills Survey 2: Tools for Sentence Expansion",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1230,
        "activity_name": "Pre-AP® Writing Skills Survey 2: Tools for Sentence Expansion",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
    ]
  }
>
  <section
    className="diagnostic-mini"
  >
    <header>
      <h2>
        <span>
          Diagnostic 
        </span>
        <span
          className="no-break"
        >
          <span>
            recommendations
          </span>
          <a
            className="focus-on-light"
            href="https://app.intercom.com/a/apps/v2ms5bl3/articles/articles/5014101/show"
          >
            <img
              alt="Question mark icon"
              src="undefined/images/icons/icons-help.svg"
            />
          </a>
        </span>
      </h2>
    </header>
    <DataTable
      averageFontWidth={7}
      headers={
        Array [
          Object {
            "attribute": "diagnostic",
            "name": "Diagnostic",
            "width": "230px",
          },
          Object {
            "attribute": "classroom",
            "name": "Class",
            "width": "180px",
          },
          Object {
            "attribute": "completed",
            "name": "Completed",
            "rowSectionClassName": "completed-row-section",
            "width": "62px",
          },
          Object {
            "attribute": "recommendations",
            "headerClassName": "last-header",
            "name": "Recommendations",
            "noTooltip": true,
            "rowSectionClassName": "last-row-section",
            "width": "104px",
          },
        ]
      }
      rows={
        Array [
          Object {
            "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
            "completed": "0 of 5",
            "diagnostic": "ELL Diagnostic",
            "id": "447-484134-826269",
            "recommendations": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/447/c/484134/recommendations"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "recommendationsHref": "/teachers/progress_reports/diagnostic_reports#/u/826269/a/447/c/484134/recommendations",
          },
          Object {
            "classroom": "A New Class",
            "completed": "0 of 0",
            "diagnostic": "ELL Diagnostic",
            "id": "447-484135-826269",
            "recommendations": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/447/c/484135/recommendations"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "recommendationsHref": "/teachers/progress_reports/diagnostic_reports#/u/826269/a/447/c/484135/recommendations",
          },
          Object {
            "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
            "completed": "5 of 5",
            "diagnostic": "Starter Diagnostic",
            "id": "849-484134-826268",
            "recommendations": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#/u/826268/a/849/c/484134/recommendations"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "recommendationsHref": "/teachers/progress_reports/diagnostic_reports#/u/826268/a/849/c/484134/recommendations",
          },
          Object {
            "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
            "completed": "0 of 5",
            "diagnostic": "Starter Diagnostic",
            "id": "849-484134-826269",
            "recommendations": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/849/c/484134/recommendations"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "recommendationsHref": "/teachers/progress_reports/diagnostic_reports#/u/826269/a/849/c/484134/recommendations",
          },
          Object {
            "classroom": "A New Class",
            "completed": "0 of 0",
            "diagnostic": "Starter Diagnostic",
            "id": "849-484135-826269",
            "recommendations": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/849/c/484135/recommendations"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "recommendationsHref": "/teachers/progress_reports/diagnostic_reports#/u/826269/a/849/c/484135/recommendations",
          },
        ]
      }
    >
      <div
        className="data-table undefined"
      >
        <div
          className="data-table-headers"
        >
          <button
            className="data-table-header undefined"
            style={
              Object {
                "minWidth": "230px",
                "textAlign": "left",
                "width": "230px",
              }
            }
            tabIndex={-1}
            type="button"
          >
            Diagnostic
          </button>
          <button
            className="data-table-header undefined"
            style={
              Object {
                "minWidth": "180px",
                "textAlign": "left",
                "width": "180px",
              }
            }
            tabIndex={-1}
            type="button"
          >
            Class
          </button>
          <button
            className="data-table-header undefined"
            style={
              Object {
                "minWidth": "62px",
                "textAlign": "left",
                "width": "62px",
              }
            }
            tabIndex={-1}
            type="button"
          >
            Completed
          </button>
          <button
            className="data-table-header last-header"
            style={
              Object {
                "minWidth": "104px",
                "textAlign": "left",
                "width": "104px",
              }
            }
            tabIndex={-1}
            type="button"
          >
            Recommendations
          </button>
        </div>
        <div
          className="data-table-body"
        >
          <div
            className="data-table-row  "
            key="447-484134-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-447-484134-826269"
              style={
                Object {
                  "minWidth": "230px",
                  "textAlign": "left",
                  "width": "230px",
                }
              }
            >
              ELL Diagnostic
            </span>
            <Tooltip
              key="classroom-447-484134-826269"
              tooltipText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
              tooltipTriggerText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerTextClass="data-table-row-section undefined"
              tooltipTriggerTextStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              <span
                className="quill-tooltip-trigger"
                style={
                  Object {
                    "minWidth": "180px",
                    "textAlign": "left",
                    "width": "180px",
                  }
                }
              >
                <span
                  className="data-table-row-section undefined"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "minWidth": "180px",
                      "textAlign": "left",
                      "width": "180px",
                    }
                  }
                >
                  Quill Classroom Extremely Long So Long SUper Duper
                </span>
                <span
                  className="quill-tooltip-wrapper"
                >
                  <span
                    className="quill-tooltip"
                  />
                </span>
              </span>
            </Tooltip>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-447-484134-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 5
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="recommendations-447-484134-826269"
              style={
                Object {
                  "minWidth": "104px",
                  "textAlign": "left",
                  "width": "104px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/447/c/484134/recommendations"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="447-484135-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-447-484135-826269"
              style={
                Object {
                  "minWidth": "230px",
                  "textAlign": "left",
                  "width": "230px",
                }
              }
            >
              ELL Diagnostic
            </span>
            <span
              className="data-table-row-section undefined"
              key="classroom-447-484135-826269"
              style={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              A New Class
            </span>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-447-484135-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 0
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="recommendations-447-484135-826269"
              style={
                Object {
                  "minWidth": "104px",
                  "textAlign": "left",
                  "width": "104px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/447/c/484135/recommendations"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="849-484134-826268"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-849-484134-826268"
              style={
                Object {
                  "minWidth": "230px",
                  "textAlign": "left",
                  "width": "230px",
                }
              }
            >
              Starter Diagnostic
            </span>
            <Tooltip
              key="classroom-849-484134-826268"
              tooltipText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
              tooltipTriggerText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerTextClass="data-table-row-section undefined"
              tooltipTriggerTextStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              <span
                className="quill-tooltip-trigger"
                style={
                  Object {
                    "minWidth": "180px",
                    "textAlign": "left",
                    "width": "180px",
                  }
                }
              >
                <span
                  className="data-table-row-section undefined"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "minWidth": "180px",
                      "textAlign": "left",
                      "width": "180px",
                    }
                  }
                >
                  Quill Classroom Extremely Long So Long SUper Duper
                </span>
                <span
                  className="quill-tooltip-wrapper"
                >
                  <span
                    className="quill-tooltip"
                  />
                </span>
              </span>
            </Tooltip>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-849-484134-826268"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              5 of 5
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="recommendations-849-484134-826268"
              style={
                Object {
                  "minWidth": "104px",
                  "textAlign": "left",
                  "width": "104px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#/u/826268/a/849/c/484134/recommendations"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="849-484134-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-849-484134-826269"
              style={
                Object {
                  "minWidth": "230px",
                  "textAlign": "left",
                  "width": "230px",
                }
              }
            >
              Starter Diagnostic
            </span>
            <Tooltip
              key="classroom-849-484134-826269"
              tooltipText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
              tooltipTriggerText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerTextClass="data-table-row-section undefined"
              tooltipTriggerTextStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              <span
                className="quill-tooltip-trigger"
                style={
                  Object {
                    "minWidth": "180px",
                    "textAlign": "left",
                    "width": "180px",
                  }
                }
              >
                <span
                  className="data-table-row-section undefined"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "minWidth": "180px",
                      "textAlign": "left",
                      "width": "180px",
                    }
                  }
                >
                  Quill Classroom Extremely Long So Long SUper Duper
                </span>
                <span
                  className="quill-tooltip-wrapper"
                >
                  <span
                    className="quill-tooltip"
                  />
                </span>
              </span>
            </Tooltip>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-849-484134-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 5
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="recommendations-849-484134-826269"
              style={
                Object {
                  "minWidth": "104px",
                  "textAlign": "left",
                  "width": "104px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/849/c/484134/recommendations"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="849-484135-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-849-484135-826269"
              style={
                Object {
                  "minWidth": "230px",
                  "textAlign": "left",
                  "width": "230px",
                }
              }
            >
              Starter Diagnostic
            </span>
            <span
              className="data-table-row-section undefined"
              key="classroom-849-484135-826269"
              style={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              A New Class
            </span>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-849-484135-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 0
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="recommendations-849-484135-826269"
              style={
                Object {
                  "minWidth": "104px",
                  "textAlign": "left",
                  "width": "104px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#/u/826269/a/849/c/484135/recommendations"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
        </div>
      </div>
    </DataTable>
    <button
      className="bottom-button focus-on-light interactive-wrapper"
      onClick={[Function]}
      type="button"
    >
      Show more 
      <img
        alt=""
        src="undefined/images/icons/expand.svg"
      />
    </button>
  </section>
</DiagnosticMini>
`;
